--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,6 +1,8 @@
 specVersion: 0.0.4
 schema:
   file: ./schema.graphql
+features:
+- ipfsOnEthereumContracts
 dataSources:
   - kind: ethereum
     name: Web3RSVP
@@ -8,15 +10,16 @@ dataSources:
     source:
       address: "0xd6c760a199C4fb9EE7629480979bB71A87238665"
       abi: Web3RSVP
+      startBlock: 27626892
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
       language: wasm/assemblyscript
       entities:
-        - ConfirmedAttendee
-        - DepositsPaidOut
-        - NewEventCreated
-        - NewRSVP
+        - Event
+        - Account
+        - RSVP
+        - Confirmation
       abis:
         - name: Web3RSVP
           file: ./abis/Web3RSVP.json
